--- a/app/src/main/res/layout/activity_join_step2.xml
+++ b/app/src/main/res/layout/activity_join_step2.xml
@@ -110,7 +110,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="이메일"
                 android:textColor="@color/greyish_brown"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step2_et_email"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -135,7 +135,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="입력한 이메일로 본인 확인 메일이 전송됩니다."
                 android:textColor="#a7a7a7"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView22"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_email" />
 
@@ -156,7 +156,7 @@
                 android:paddingTop="11dp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView22" />
@@ -182,7 +182,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="이메일 주소를 입력해주세요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_email_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_email_warning"
@@ -199,7 +199,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="올바른 이메일 형식이 아니에요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_email_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_email_warning"
@@ -216,7 +216,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="이미 가입된 이메일이에요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_email_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_email_warning"
@@ -245,7 +245,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="비밀번호"
                 android:textColor="@color/greyish_brown"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step2_et_pass"
                 app:layout_constraintTop_toBottomOf="@+id/activity_join_step2_img_email_warning" />
 
@@ -270,7 +270,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="영문+숫자 최소 8자리 이상 입력해주세요."
                 android:textColor="#a7a7a7"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView25"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_pass" />
 
@@ -291,7 +291,7 @@
                 android:paddingTop="11dp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_email"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step2_et_email"
                 app:layout_constraintTop_toBottomOf="@+id/textView25" />
@@ -313,7 +313,7 @@
                 android:paddingTop="11dp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_pass"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step2_et_pass"
                 app:layout_constraintTop_toBottomOf="@+id/activity_join_step2_et_pass" />
@@ -339,7 +339,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="비밀번호를 입력해주세요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_pass_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_pass_warning"
@@ -356,7 +356,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="비밀번호를 한 번 더 입력해주세요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_pass_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_pass_warning"
@@ -373,7 +373,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="비밀번호가 일치하지 않아요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_pass_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_pass_warning"
@@ -390,7 +390,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="비밀번호가 일치해요!"
                 android:textColor="@color/soft_green"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_pass_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_pass_warning"
@@ -407,7 +407,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="영문+숫자 최소 8자리 이상 입력해주세요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_pass_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_pass_warning"
@@ -446,7 +446,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="닉네임"
                 android:textColor="@color/greyish_brown"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step2_et_nickname"
                 app:layout_constraintTop_toBottomOf="@+id/activity_join_step2_img_pass_warning" />
 
@@ -471,7 +471,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="몽글에서의 닉네임을 6자 이내로 입력해주세요."
                 android:textColor="#a7a7a7"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView29"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_nickname" />
 
@@ -493,7 +493,7 @@
                 android:paddingTop="11dp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 app:layout_constraintBottom_toTopOf="@+id/textView33"
                 app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_email"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -557,7 +557,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="닉네임을 입력해주세요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_nickname_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_nickname_warning"
@@ -574,7 +574,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="이미 사용 중인 닉네임이에요!"
                 android:textColor="@color/reddish"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_nickname_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_nickname_warning"
@@ -612,7 +612,7 @@
                 android:letterSpacing="-0.04"
                 android:lineSpacingExtra="8sp"
                 android:text=" 항목은 필수 항목입니다."
-                android:textSize="14sp"
+                android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -650,7 +650,7 @@
         android:paddingBottom="14dp"
         android:text="다음"
         android:textColor="#ffffff"
-        android:textSize="19sp"
+        android:textSize="19dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
