--- a/app/src/main/res/layout/activity_curator_keyword.xml
+++ b/app/src/main/res/layout/activity_curator_keyword.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:includeFontPadding="false"
             android:textColor="@color/black_two"
-            android:textSize="19sp"
+            android:textSize="19dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
