--- a/app/src/main/res/layout/activity_join_finish.xml
+++ b/app/src/main/res/layout/activity_join_finish.xml
@@ -35,7 +35,7 @@
             android:lineSpacingExtra="4sp"
             android:text="몽글즈가 되신 것을 환영해요!"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="@+id/imageView25"
             app:layout_constraintStart_toStartOf="@+id/imageView25"
             app:layout_constraintTop_toBottomOf="@+id/imageView25" />
@@ -52,7 +52,7 @@
             android:lineSpacingExtra="6sp"
             android:text="혼자만 알기 아까운 책 속의 문장을"
             android:textColor="#909090"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="@+id/textView36"
             app:layout_constraintStart_toStartOf="@+id/textView36"
             app:layout_constraintTop_toBottomOf="@+id/textView36" />
@@ -68,7 +68,7 @@
             android:lineSpacingExtra="6sp"
             android:text="다양한 큐레이터와 공유해보세요!"
             android:textColor="#909090"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="@+id/textView36"
             app:layout_constraintStart_toStartOf="@+id/textView36"
             app:layout_constraintTop_toBottomOf="@+id/textView38" />
@@ -90,7 +90,7 @@
             android:paddingBottom="10dp"
             android:text="메인으로 가기"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView38" />
