--- a/app/src/main/res/layout/activity_join_step1.xml
+++ b/app/src/main/res/layout/activity_join_step1.xml
@@ -39,7 +39,7 @@
             android:lineSpacingExtra="7sp"
             android:text="몽글"
             android:textColor="#3e3e3e"
-            android:textSize="23sp"
+            android:textSize="23dp"
             app:layout_constraintStart_toStartOf="@+id/imageView4"
             app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
@@ -61,7 +61,7 @@
             android:lineSpacingExtra="7sp"
             android:text="가입하기"
             android:textColor="#717171"
-            android:textSize="23sp"
+            android:textSize="23dp"
             app:layout_constraintStart_toStartOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -75,7 +75,7 @@
             android:lineSpacingExtra="7sp"
             android:text="에"
             android:textColor="#717171"
-            android:textSize="23sp"
+            android:textSize="23dp"
             app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toTopOf="@+id/textView5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -150,7 +150,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="16dp"
         android:textColor="#5a5a5a"
         android:letterSpacing="-0.04"
         android:lineSpacingExtra="8sp"
@@ -197,7 +197,7 @@
         android:lineSpacingExtra="1sp"
         android:text="필수 항목을 동의해야 가입할 수 있어요!"
         android:textColor="#cf3232"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/activity_join_step1_img_warning"
         app:layout_constraintStart_toEndOf="@+id/activity_join_step1_img_warning"
@@ -226,7 +226,7 @@
         android:lineSpacingExtra="8sp"
         android:text="[필수] 서비스 이용약관 동의"
         android:textColor="#5a5a5a"
-        android:textSize="16sp"
+        android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/activity_join_step1_cb2"
         app:layout_constraintStart_toEndOf="@+id/activity_join_step1_cb2"
         app:layout_constraintTop_toTopOf="@+id/activity_join_step1_cb2" />
@@ -266,7 +266,7 @@
         android:lineSpacingExtra="1sp"
         android:text="필수 항목을 동의해야 가입할 수 있어요!"
         android:textColor="#cf3232"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/activity_join_step1_img_warning2"
         app:layout_constraintStart_toEndOf="@+id/activity_join_step1_img_warning2"
@@ -283,7 +283,7 @@
         android:letterSpacing="-0.02"
         android:text="약관 동의 체크는 해당 약관을 모두 숙지하였으며, 이에 동의함을 의미합니다."
         android:textColor="#a7a7a7"
-        android:textSize="15sp"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/activity_join_step1_cb"
         app:layout_constraintTop_toBottomOf="@+id/activity_join_step1_tv_warning2" />
@@ -304,7 +304,7 @@
         android:paddingBottom="14dp"
         android:text="다음"
         android:textColor="#ffffff"
-        android:textSize="19sp"
+        android:textSize="19dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
