--- a/app/src/main/res/layout/item_search_sentence.xml
+++ b/app/src/main/res/layout/item_search_sentence.xml
@@ -26,7 +26,7 @@
             android:lineSpacingExtra="2sp"
             android:singleLine="true"
             android:textColor="#bcbcbc"
-            android:textSize="13sp"
+            android:textSize="13dp"
             app:layout_constraintEnd_toStartOf="@+id/search_sentence_guide_right"
             app:layout_constraintStart_toStartOf="@id/cl_search_sentence"
             app:layout_constraintTop_toTopOf="@id/cl_search_sentence"
@@ -43,7 +43,7 @@
             android:letterSpacing="-0.02"
             android:maxLines="2"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="@id/search_sentence_guide_right"
             app:layout_constraintStart_toStartOf="@+id/search_sentence_tv_themename"
             app:layout_constraintTop_toBottomOf="@+id/search_sentence_tv_themename"
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:text=""
-            android:textSize="12sp"
+            android:textSize="12dp"
             android:textColor="@color/very_light_pink_two"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="3sp"
