--- a/app/src/main/res/layout/item_search_theme.xml
+++ b/app/src/main/res/layout/item_search_theme.xml
@@ -37,7 +37,7 @@
             android:letterSpacing="-0.02"
             android:text=""
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="@+id/search_theme_guide_right"
             app:layout_constraintStart_toEndOf="@id/search_theme_guide_left"
             app:layout_constraintTop_toTopOf="@+id/cl_result_theme" />
@@ -65,7 +65,7 @@
             android:includeFontPadding="false"
             android:text=""
             android:textColor="#bcbcbc"
-            android:textSize="14sp"
+            android:textSize="14dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toTopOf="@+id/imageView5" />
@@ -91,7 +91,7 @@
             android:includeFontPadding="false"
             android:text="문장 "
             android:textColor="#bcbcbc"
-            android:textSize="14sp"
+            android:textSize="14dp"
             app:layout_constraintBottom_toBottomOf="@+id/search_theme_tv_bookmark"
             app:layout_constraintStart_toEndOf="@+id/imageView6"
             app:layout_constraintTop_toTopOf="@+id/search_theme_tv_bookmark" />
@@ -106,7 +106,7 @@
             android:includeFontPadding="false"
             android:text=""
             android:textColor="#bcbcbc"
-            android:textSize="14sp"
+            android:textSize="14dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView12"
             app:layout_constraintStart_toEndOf="@+id/textView12"
             app:layout_constraintTop_toTopOf="@+id/textView12" />
@@ -121,7 +121,7 @@
             android:includeFontPadding="false"
             android:text="개"
             android:textColor="#bcbcbc"
-            android:textSize="14sp"
+            android:textSize="14dp"
             app:layout_constraintBottom_toBottomOf="@+id/search_theme_tv_sentence_count"
             app:layout_constraintStart_toEndOf="@+id/search_theme_tv_sentence_count"
             app:layout_constraintTop_toTopOf="@+id/search_theme_tv_sentence_count" />
