[Implement Features] 토큰 갱신 수정, 검색뷰 수정

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,7 @@
         <item name="android:paddingBottom">5dp</item>
     </style>
 
+    <style name="tab_text" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">17dp</item>
+    </style>
 </resources>
