[Implement Features] 프로필뷰 제약 수정

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -400,8 +400,7 @@
                 android:background="#e8e8e8"
                 app:layout_constraintBottom_toTopOf="@+id/activity_profile_radiogroup"
                 app:layout_constraintEnd_toEndOf="@+id/activity_profile_radiogroup"
-                app:layout_constraintStart_toStartOf="@+id/activity_profile_radiogroup"
-                app:layout_constraintTop_toTopOf="@+id/fragment_curator_tv_donggi" />
+                app:layout_constraintStart_toStartOf="@+id/activity_profile_radiogroup" />
 
             <View
                 android:id="@+id/view27"
@@ -410,8 +409,7 @@
                 android:background="#e8e8e8"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_profile_radiogroup"
                 app:layout_constraintEnd_toEndOf="@+id/activity_profile_radiogroup"
-                app:layout_constraintStart_toStartOf="@+id/activity_profile_radiogroup"
-                app:layout_constraintTop_toTopOf="@+id/fragment_curator_tv_donggi" />
+                app:layout_constraintStart_toStartOf="@+id/activity_profile_radiogroup" />
 
             <View
                 android:id="@+id/view24"
@@ -419,8 +417,8 @@
                 android:layout_height="1dp"
                 android:background="#e8e8e8"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_profile_radiogroup"
-                app:layout_constraintEnd_toEndOf="@+id/fragment_curator_tv_jagi"
-                app:layout_constraintStart_toStartOf="@+id/fragment_curator_tv_gamsung"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/activity_profile_radiogroup" />
 
             <View
