--- a/app/src/main/res/layout/writing_sentence_finish.xml
+++ b/app/src/main/res/layout/writing_sentence_finish.xml
@@ -28,6 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/writing_sentence_finish_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="몽글이님의 문장으로\n몽글이 더욱 풍부해졌어요!"
