[Implement Features] sp로 수정.. 최근검색어 전체삭제 수정

--- a/app/src/main/res/layout/activity_join_step3.xml
+++ b/app/src/main/res/layout/activity_join_step3.xml
@@ -157,7 +157,7 @@
                 android:lineSpacingExtra="5sp"
                 android:text="이메일을 확인해주세요!"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view_empty2" />
@@ -184,7 +184,7 @@
                 android:letterSpacing="-0.04"
                 android:text="입력한 mongle@mongle.com 으로 전송된 메일 속 본인 확인 인증 코드를 입력해주세요."
                 android:textColor="#909090"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view_empty3" />
@@ -208,7 +208,7 @@
                 android:lineSpacingExtra="1sp"
                 android:text="05:00"
                 android:textColor="@color/soft_green"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@+id/textView26"
                 app:layout_constraintStart_toStartOf="@+id/textView26"
                 app:layout_constraintTop_toBottomOf="@+id/view_empty4" />
@@ -238,7 +238,7 @@
                 android:maxLength="1"
                 android:nextFocusDown="@id/activity_join_step3_et_code2"
                 android:textColor="@color/soft_green"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code2"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
@@ -261,7 +261,7 @@
                 android:maxLength="1"
                 android:nextFocusRight="@id/activity_join_step3_et_code2"
                 android:textColor="@color/soft_green"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code3"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code1"
@@ -282,7 +282,7 @@
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
                 android:textColor="@color/soft_green"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code4"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code2"
@@ -303,7 +303,7 @@
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
                 android:textColor="@color/soft_green"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code5"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code3"
@@ -324,7 +324,7 @@
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
                 android:textColor="@color/soft_green"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code6"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code4"
@@ -345,7 +345,7 @@
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
                 android:textColor="@color/soft_green"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code5"
@@ -372,7 +372,7 @@
                 android:letterSpacing="-0.04"
                 android:text="잘못된 코드에요! 다시 입력해주세요!"
                 android:textColor="@color/reddish"
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step3_ic_error"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_ic_error"
@@ -401,7 +401,7 @@
             android:lineSpacingExtra="8sp"
             android:text="이메일을 받지 못하셨나요?"
             android:textColor="@color/very_light_pink_two"
-            android:textSize="14dp"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView12"
             app:layout_constraintHorizontal_bias="0.5"
@@ -438,7 +438,7 @@
         android:paddingBottom="14dp"
         android:text="가입하기"
         android:textColor="#ffffff"
-        android:textSize="19dp"
+        android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
