--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -36,7 +36,7 @@
             android:lineSpacingExtra="-1sp"
             android:text="비밀번호가 변경되었어요!"
             android:textColor="@color/black"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_marginHorizontal="69dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
             android:letterSpacing="-0.02"
             android:text="변경된 비밀번호로 재로그인을 해주세요!"
             android:textColor="#a7a7a7"
-            android:textSize="14dp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/tv_change_password_good"
             app:layout_constraintStart_toStartOf="@+id/tv_change_password_good"
             app:layout_constraintTop_toBottomOf="@+id/tv_change_password_good" />
@@ -76,7 +76,7 @@
             android:paddingBottom="8dp"
             android:text="재로그인"
             android:textColor="@color/white"
-            android:textSize="14dp"
+            android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_change_password_relogin"
