--- a/app/src/main/res/layout/activity_open_source.xml
+++ b/app/src/main/res/layout/activity_open_source.xml
@@ -48,7 +48,7 @@
             android:includeFontPadding="false"
             android:text="오픈소스 라이선스"
             android:textColor="@color/black_two"
-            android:textSize="19dp"
+            android:textSize="19sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
