--- a/app/src/main/res/layout/activity_privacy_terms.xml
+++ b/app/src/main/res/layout/activity_privacy_terms.xml
@@ -51,7 +51,7 @@
                 android:lineSpacingExtra="7sp"
                 android:text="몽글"
                 android:textColor="#3e3e3e"
-                android:textSize="23dp"
+                android:textSize="23sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView4"
                 app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
@@ -74,7 +74,7 @@
                 android:lineSpacingExtra="7sp"
                 android:text="개인정보 이용약관"
                 android:textColor="#717171"
-                android:textSize="23dp"
+                android:textSize="23sp"
                 app:layout_constraintStart_toStartOf="@+id/textView5"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -88,7 +88,7 @@
                 android:letterSpacing="-0.03"
                 android:text="몽글의 회원 관리 및 운영을 위하여 아래와 같이 개인정보를 수집ㆍ이용하고자 합니다. 내용을 자세히 읽으신 후 동의 여부를 결정하여 주십시오."
                 android:textColor="#656565"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView9"
                 app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -102,7 +102,7 @@
                 android:letterSpacing="-0.04"
                 android:text="개인정보 수집ㆍ이용 내용"
                 android:textColor="#434343"
-                android:textSize="19dp"
+                android:textSize="19sp"
                 app:layout_constraintStart_toStartOf="@+id/textView12"
                 app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -117,7 +117,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="1. 항목"
                 android:textColor="#454545"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView13"
                 app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
@@ -142,7 +142,7 @@
                 android:lineSpacingExtra="10sp"
                 android:text="비밀번호"
                 android:textColor="#5f5f5f"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                 app:layout_constraintStart_toEndOf="@+id/imageView7"
                 app:layout_constraintTop_toTopOf="@+id/imageView7" />
@@ -158,7 +158,7 @@
                 android:lineSpacingExtra="10sp"
                 android:text="이메일(아이디)"
                 android:textColor="#5f5f5f"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                 app:layout_constraintStart_toEndOf="@+id/imageView3"
                 app:layout_constraintTop_toTopOf="@+id/imageView3" />
@@ -183,7 +183,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="2. 수집ㆍ이용목적"
                 android:textColor="#454545"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView13"
                 app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
@@ -199,7 +199,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="회원의 신원 확인 및 관리"
                 android:textColor="#5f5f5f"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView15"
                 app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
@@ -214,7 +214,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="3. 보유기간"
                 android:textColor="#454545"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView13"
                 app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
@@ -230,7 +230,7 @@
                 android:lineSpacingExtra="8sp"
                 android:text="회원 가입 시 부터 회원 탈퇴 시"
                 android:textColor="#5f5f5f"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView16"
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
@@ -244,7 +244,7 @@
                 android:letterSpacing="-0.02"
                 android:text="위의 개인정보 수집 이용에 대해 거부할 권리가 있습니다. 그러나 동의를 거부할 경우 몽글의 서비스를 이용할 수 없습니다.\n"
                 android:textColor="#656565"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/textView16"
                 app:layout_constraintTop_toBottomOf="@+id/textView18" />
