--- a/app/src/main/res/layout/item_recent_keyword.xml
+++ b/app/src/main/res/layout/item_recent_keyword.xml
@@ -19,7 +19,7 @@
         android:singleLine="true"
         android:text="몽글몽"
         android:textColor="@color/soft_green"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
