[Implement Features] - 테마에 문장쓰기 뷰 작가 / 출판사 text 중앙 배열

--- a/app/src/main/res/layout/activity_theme_writing_sentence_book.xml
+++ b/app/src/main/res/layout/activity_theme_writing_sentence_book.xml
@@ -192,11 +192,12 @@
             android:layout_width="0dp"
             android:layout_height="46dp"
             android:layout_marginTop="9dp"
+            android:text="작가/옮긴이"
             android:background="@drawable/et_area_grey"
             android:paddingStart="15dp"
             android:paddingTop="10dp"
             android:paddingEnd="15dp"
-            android:paddingBottom="12dp"
+            android:paddingBottom="10dp"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:letterSpacing="-0.02"
@@ -228,6 +229,7 @@
             android:layout_width="0dp"
             android:layout_height="46dp"
             android:layout_marginTop="10dp"
+            android:text="출판사"
             android:background="@drawable/et_area_grey"
             android:paddingStart="15dp"
             android:paddingTop="10dp"
